# template-c

./: CMakeLists.txt  README
include/template/: template.h
src/: main.c  template.c
tests/: template_test.cpp
